--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: var(--clr-cream);
 }
 
 .container{
@@ -177,137 +178,3 @@ button {
     margin-top:12.5%;
 }
 
-
-
-
-
-
-@media only screen and (max-width: 768px) {
-    .container{
-    
-        /* margin:9rem; */
-        /* margin-left: 25rem; */
-        width: 35rem;
-        height: 26rem;
-    
-        border: 1px solid transparent;
-        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-        border-radius: 9px;
-    
-        display: grid;
-        grid-template-rows: repeat(1,1fr);
-        grid-template-columns: repeat(2,1fr);
-        z-index:-1;
-        position:relative;
-    
-    }
-    
-    /* IMAGE SECTION */
-    .Section-Image{
-        width: 14.2rem;
-    }
-    img{
-        object-position:right top;
-        object-fit:contain;
-        width:17.6rem;
-        border-top-left-radius:9px;
-        border-bottom-left-radius:9px;
-    
-        grid-row-start:1;
-        grid-row-end:4;
-    
-        grid-column-start: 1;
-        grid-column-end: 2;
-        
-    
-        
-    }
-    
-    
-    
-    
-    
-    /* TEXT SECTION */
-    .Section-Text{
-        width: 17.3em;
-        background-color: var(--clr-White);
-        border-top-right-radius:9px;
-        border-bottom-right-radius: 9px;
-        padding-left: 1.75em;
-        
-        grid-row-start: 1;
-        grid-row-end: 1;
-    
-        grid-column-start: 2;
-        grid-column-start: 3;
-    
-        height:26.3rem;
-    
-    }
-    .Section-Text #imp{
-        letter-spacing: 4px; 
-    }
-    p{
-        font-family: var(--font-mont);
-        color: var(--clr-grayish-blue);
-        font-size: var(--fs-para);
-    }
-    .Section-Text :nth-child(1){
-        font-weight: var(--mont-wght-med);
-        text-transform: uppercase;
-        font-size: 14px;
-    }
-    
-    .Section-Text :nth-child(2){
-        font-family: var(--font-frans);
-        font-weight: var(--fraunces-wght-bold);
-        width: 10ch;
-        margin-top: 0.5rem;
-        font-size:1.9rem;
-        line-height: 100%;
-    }
-    .Section-Text :nth-child(3){
-        font-family: var(--font-mont);
-        color: var(--clr-grayish-blue);
-        font-size: var(--fs-para);
-        width: 24.5ch;
-    
-    }
-    .Section-Text :nth-child(4){
-        color: var(--clr-dark-cyan);
-        font-size:var(--step-0);
-        font-family: var(--font-frans);
-        font-weight: var(--fraunces-wght-bold);
-        margin-top: 1rem;
-        margin-bottom:0%;
-        display: inline-block;
-        margin-right: 3%;
-        }
-    
-    .Section-Text :nth-child(5){
-        font-size: 0.7rem;
-        color: var(--clr-grayish-blue);
-        display: inline-block;
-        vertical-align:super;
-        font-family: var(--font-mont);
-        font-weight: var(--mont-wght-med);
-        text-decoration:line-through;
-    }
-    
-    
-    embed{
-        padding-right:0.5rem;
-    }
-    button {
-        display:inline-flex;
-        font-family: var(--font-mont);
-        font-weight: var(--mont-wght-bold);
-        color: var(--clr-White);
-        background-color: var(--clr-dark-cyan);
-        border: 1px solid transparent;
-        border-radius: 7px;
-        padding: 0.75rem 3.5rem;
-        margin-top:12.5%;
-    }
-    
-}
