style.css modified

--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@
     max-width: 850px;
     font-size:1rem;
     background-color: var(--clr-cream);
+    colo
 } */
 body{
     min-height: 100vh;
